--- a/configs/_base_/dataset/my_dataset_configs.json
+++ b/configs/_base_/dataset/my_dataset_configs.json
@@ -77,5 +77,43 @@
               "path": "GT_Edge",
               "suffix": ".png"
           }
+      },
+    "vt5000_tr": {
+          "root": "D:\\Yang\\datasets\\VT5000\\VT5000\\Train",
+          "image": {
+              "path": "RGB",
+              "suffix": ".jpg"
+          },
+          "mask": {
+              "path": "GT",
+              "suffix": ".png"
+          },
+        "thermal": {
+              "path": "T",
+              "suffix": ".jpg"
+          },
+          "edge": {
+              "path": "GT_Edge",
+              "suffix": ".png"
+          }
+      },
+    "vt5000_te": {
+          "root": "D:\\Yang\\datasets\\VT5000\\VT5000\\Test",
+          "image": {
+              "path": "RGB",
+              "suffix": ".jpg"
+          },
+          "mask": {
+              "path": "GT",
+              "suffix": ".png"
+          },
+        "thermal": {
+              "path": "T",
+              "suffix": ".jpg"
+          },
+          "edge": {
+              "path": "GT_Edge",
+              "suffix": ".png"
+          }
       }
   }
